--- a/app/templates/formulario.html
+++ b/app/templates/formulario.html
@@ -235,7 +235,7 @@
     <!-- Checkbox de aceite dos termos -->
     <label>
       <input type="checkbox" id="termo_responsabilidade" {% if pedido and pedido.termo_responsabilidade %}checked{% endif %}>
-      Aceito os termos de responsabilidade
+     Declaramos serem verdadeiras as informações prestadas, responsabilizando-nos civil e criminalmente pelos atos praticados pelas pessoas aqui relacionadas. Estamos cientes de que a autorização por parte da Alfândega de Santos não exime o cumprimento de outras obrigações pertinentes aos outros Órgãos da Administração Pública.
     </label>
 
     <!-- Botão final: se existir 'pedido' chama a função de atualização; caso contrário, envia um novo pedido -->
