--- a/app/templates/lista-pedidos.html
+++ b/app/templates/lista-pedidos.html
@@ -318,17 +318,19 @@
             <span class="label">Status:</span>
             <span class="value">
                 {% if pedido.status == "pendente" %}
-                    <span class="status status-pendente">
-                        Pendente ⏳
-                        {% if current_user.role != "RFB" %}
-                            <a href="{{ url_for('pedidos.editar_pedido', pedido_id=pedido.id) }}">(editar pedido)</a>
-                        {% endif %}
-                    </span>
+                    <span class="status status-pendente">Pendente ⏳ </span>
                 {% elif pedido.status == "aprovado" %}
-                    <span class="status status-aprovado">Aprovado ✅ <a href="{{ url_for('pedidos.gerar_comprovante', pedido_id=pedido.id) }}" target="_blank">Ver Comprovante</a>
-</span>
+                    <span class="status status-aprovado">Aprovado ✅ <a href="{{ url_for('pedidos.gerar_comprovante', pedido_id=pedido.id) }}" target="_blank">Ver Comprovante</a></span>
                 {% elif pedido.status == "rejeitado" %}
                     <span class="status status-rejeitado">Rejeitado ❌</span>
+					
+                {% elif pedido.status == "aguardando_agencia" %}
+                    <span class="status status-aguardando">Aguardando agência ⏳ </span>
+					
+			            {% if current_user.role == "comum" %}
+                            <a href="{{ url_for('pedidos.editar_pedido', pedido_id=pedido.id) }}">(editar pedido)</a>
+                        {% endif %}
+				
 				{% elif pedido.status == "exigência" %}
                     <span class="status status-exigencia">Com exigência ⚠ <a href="{{ url_for('pedidos.detalhes_exigencia', exigencia_id=pedido.exigencias[0].id) }}">🔍 Ver detalhes da Exigência</a></span>
                 {% endif %}
@@ -339,7 +341,7 @@
             {% if pedido.status == "pendente" %}
                 <button class="btn-aprovar" onclick="aprovarPedido({{ pedido.id }})">✔ Aprovar</button>
                 <button class="btn-rejeitar" onclick="rejeitarPedido({{ pedido.id }})">✖ Rejeitar</button>
-			<button class="btn-exigencia" onclick="abrirModalExigencia({{ pedido.id }})">⚠ Fazer exigência</button>
+				<button class="btn-exigencia" onclick="abrirModalExigencia({{ pedido.id }})">⚠ Fazer exigência</button>
             {% endif %}
         </div>
         {% endif %}
