--- a/app/templates/detalhes_comprovante.html
+++ b/app/templates/detalhes_comprovante.html
@@ -44,7 +44,7 @@
       <strong>Horário de Término dos Serviços:</strong> {{ pedido.horario_termino_servicos }}
     </div>
     <div class="detail">
-      <strong>Status:</strong> {{ pedido.status }}
+      <strong>Situação:</strong> {{ pedido.status }}
     </div>
     <div class="detail">
       <strong>Data de Criação do Pedido:</strong> {{ pedido.data_criacao_pedido.strftime('%d/%m/%Y') }}
