--- a/app/templates/agenciar.html
+++ b/app/templates/agenciar.html
@@ -122,16 +122,27 @@
                         <span class="label">Data de Término:</span>
                         <span class="value">{{ pedido.data_termino.strftime('%d/%m/%Y') }}</span>
                     </div>
-                    <div class="pedido-item">
-                        <span class="label">Status:</span>
-                        <span class="value">{{ pedido.status }}</span>
-                    </div>
+            <div class="pedido-item">
+            <span class="label">Situação:</span>
+            <span class="value">
+                {% if pedido.status == "pendente" %}
+                    <span class="status status-pendente">Pendente de análise pela RFB ⏳ </span>
+                {% elif pedido.status == "aprovado" %}
+                    <span class="status status-aprovado">Aprovado ✅ <a href="{{ url_for('pedidos.gerar_comprovante', pedido_id=pedido.id) }}" target="_blank">Ver Comprovante</a></span>
+                {% elif pedido.status == "rejeitado" %}
+                    <span class="status status-rejeitado">Rejeitado ❌</span>
+					
+                {% elif pedido.status == "aguardando_agencia" %}
+                    <span class="status status-aguardando">Aguardando agência ⏳ </span>
+				{% endif %}
                     {% if pedido.status == "aguardando_agencia" and current_user.role == "agencia_maritima" %}
                         <div class="actions">
                             <button class="btn-agenciar" onclick="agenciarPedido({{ pedido.id }})">Agenciar</button>
                             <button class="btn-rejeitar" onclick="rejeitarPedidoAgencia({{ pedido.id }})">Rejeitar</button>
                         </div>
                     {% endif %}
+            </span>
+        </div>
                 </div>
             {% else %}
                 <p>Nenhum pedido encontrado.</p>
