--- a/app/templates/lista-pedidos.html
+++ b/app/templates/lista-pedidos.html
@@ -315,14 +315,16 @@
         </div>		
 		
         <div class="pedido-item">
-            <span class="label">Status:</span>
+            <span class="label">Situação:</span>
             <span class="value">
                 {% if pedido.status == "pendente" %}
-                    <span class="status status-pendente">Pendente ⏳ </span>
+                    <span class="status status-pendente">Pendente de análise pela RFB ⏳ </span>
                 {% elif pedido.status == "aprovado" %}
                     <span class="status status-aprovado">Aprovado ✅ <a href="{{ url_for('pedidos.gerar_comprovante', pedido_id=pedido.id) }}" target="_blank">Ver Comprovante</a></span>
                 {% elif pedido.status == "rejeitado" %}
                     <span class="status status-rejeitado">Rejeitado ❌</span>
+                {% elif pedido.status == "rejeitado pela agência" %}
+                    <span class="status status-rejeitado">Rejeitado pela agência❌</span>
 					
                 {% elif pedido.status == "aguardando_agencia" %}
                     <span class="status status-aguardando">Aguardando agência ⏳ </span>
@@ -389,7 +391,8 @@
     </div>
 </div>
 
-    <div class="pagination">
+<div class="pagination">
+    {% if pedidos.pages > 0 %}
         {% if pedidos.has_prev %}
             <a href="{{ url_for('pedidos.exibir_pedidos', page=pedidos.prev_num) }}">⏪ Anterior</a>
         {% else %}
@@ -403,7 +406,10 @@
         {% else %}
             <a class="disabled">Próxima ⏩</a>
         {% endif %}
-    </div>
+    {% else %}
+        <p>Nenhum pedido cadastrado.</p>
+    {% endif %}
+</div>
 
         {% if current_user.role == "RFB" %}
 			<div><a href="{{ url_for('pedidos.admin_dashboard') }}">⬅ Voltar para o painel de administração</a></div>
