--- a/app/templates/agenciar.html
+++ b/app/templates/agenciar.html
@@ -126,15 +126,17 @@
             <span class="label">Situação:</span>
             <span class="value">
                 {% if pedido.status == "pendente" %}
-                    <span class="status status-pendente">Pendente de análise pela RFB ⏳ </span>
+                    <span>Pendente de análise pela RFB ⏳ </span>
                 {% elif pedido.status == "aprovado" %}
-                    <span class="status status-aprovado">Aprovado ✅ <a href="{{ url_for('pedidos.gerar_comprovante', pedido_id=pedido.id) }}" target="_blank">Ver Comprovante</a></span>
+                    <span>Aprovado ✅ <a href="{{ url_for('pedidos.gerar_comprovante', pedido_id=pedido.id) }}" target="_blank">Ver Comprovante</a></span>
                 {% elif pedido.status == "rejeitado" %}
-                    <span class="status status-rejeitado">Rejeitado ❌</span>
+                    <span>Rejeitado ❌</span>
                 {% elif pedido.status == "rejeitado pela agência" %}
-                    <span class="status status-rejeitado">Rejeitado pela agência ❌</span>					
+                    <span>Rejeitado pela agência ❌</span>
+				{% elif pedido.status == "exigência" %}
+					<span>Com exigência ⚠</span>							
                 {% elif pedido.status == "aguardando_agencia" %}
-                    <span class="status status-aguardando">Aguardando agência ⏳ </span>
+                    <span>Aguardando agência ⏳ </span>
 				{% endif %}
                     {% if pedido.status == "aguardando_agencia" and current_user.role == "agencia_maritima" %}
                         <div class="actions">
